[package]
name = "ieee-apsqrt"
version = "0.1.1"
edition = "2021"
description = "Square root functions for IEEE floats using rustc_apfloat"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Solra Bizna <solra@bizna.name>"]
repository = "https://github.com/SolraBizna/ieee-apsqrt"

[dependencies]
rustc_apfloat = "0.2.0"
